list(APPEND VERTEXCFD_EQUATIONSET_HEADERS
  equation_sets/VertexCFD_EquationSet_FullInductionMHD.hpp
  equation_sets/VertexCFD_EquationSet_FullInductionMHDFactory.hpp
  )
set(VERTEXCFD_EQUATIONSET_HEADERS "${VERTEXCFD_EQUATIONSET_HEADERS}" PARENT_SCOPE)

list(APPEND VERTEXCFD_EQUATIONSET_SOURCES
  equation_sets/VertexCFD_EquationSet_FullInductionMHD.cpp
  )
set(VERTEXCFD_EQUATIONSET_SOURCES "${VERTEXCFD_EQUATIONSET_SOURCES}" PARENT_SCOPE)

list(APPEND VERTEXCFD_CLOSUREMODEL_HEADERS
  full_induction_mhd_solver/closure_models/VertexCFD_FullInductionClosureModelFactory.hpp
  full_induction_mhd_solver/closure_models/VertexCFD_SolidFullInductionClosureModelFactory.hpp
  full_induction_mhd_solver/closure_models/VertexCFD_Closure_MagneticPressure.hpp
  full_induction_mhd_solver/closure_models/VertexCFD_Closure_InductionConvectiveFlux.hpp
  full_induction_mhd_solver/closure_models/VertexCFD_Closure_InductionResistiveFlux.hpp
  full_induction_mhd_solver/closure_models/VertexCFD_Closure_TotalMagneticField.hpp
  full_induction_mhd_solver/closure_models/VertexCFD_Closure_TotalMagneticFieldGradient.hpp
  full_induction_mhd_solver/closure_models/VertexCFD_Closure_MHDVortexProblemExact.hpp
  full_induction_mhd_solver/closure_models/VertexCFD_Closure_FullInductionModelErrorNorms.hpp
  full_induction_mhd_solver/closure_models/VertexCFD_Closure_DivergenceCleaningSource.hpp
  full_induction_mhd_solver/closure_models/VertexCFD_Closure_GodunovPowellSource.hpp
  full_induction_mhd_solver/closure_models/VertexCFD_Closure_MagneticCorrectionDampingSource.hpp
  full_induction_mhd_solver/closure_models/VertexCFD_Closure_FullInductionLocalTimeStepSize.hpp
  full_induction_mhd_solver/closure_models/VertexCFD_Closure_InductionConstantSource.hpp
  full_induction_mhd_solver/closure_models/VertexCFD_Closure_SolidFullInductionConvectiveFlux.hpp
  full_induction_mhd_solver/closure_models/VertexCFD_Closure_SolidFullInductionLocalTimeStepSize.hpp
  )
set(VERTEXCFD_CLOSUREMODEL_HEADERS "${VERTEXCFD_CLOSUREMODEL_HEADERS}" PARENT_SCOPE)

list(APPEND VERTEXCFD_CLOSUREMODEL_SOURCES
  full_induction_mhd_solver/closure_models/VertexCFD_FullInductionClosureModelFactory.cpp
  full_induction_mhd_solver/closure_models/VertexCFD_SolidFullInductionClosureModelFactory.cpp
  full_induction_mhd_solver/closure_models/VertexCFD_Closure_MagneticPressure.cpp
  full_induction_mhd_solver/closure_models/VertexCFD_Closure_InductionConvectiveFlux.cpp
  full_induction_mhd_solver/closure_models/VertexCFD_Closure_InductionResistiveFlux.cpp
  full_induction_mhd_solver/closure_models/VertexCFD_Closure_TotalMagneticField.cpp
  full_induction_mhd_solver/closure_models/VertexCFD_Closure_TotalMagneticFieldGradient.cpp
  full_induction_mhd_solver/closure_models/VertexCFD_Closure_MHDVortexProblemExact.cpp
  full_induction_mhd_solver/closure_models/VertexCFD_Closure_DivergenceCleaningSource.cpp
  full_induction_mhd_solver/closure_models/VertexCFD_Closure_GodunovPowellSource.cpp
  full_induction_mhd_solver/closure_models/VertexCFD_Closure_MagneticCorrectionDampingSource.cpp
  full_induction_mhd_solver/closure_models/VertexCFD_Closure_FullInductionLocalTimeStepSize.cpp
  full_induction_mhd_solver/closure_models/VertexCFD_Closure_InductionConstantSource.cpp
  full_induction_mhd_solver/closure_models/VertexCFD_Closure_SolidFullInductionConvectiveFlux.cpp
  full_induction_mhd_solver/closure_models/VertexCFD_Closure_SolidFullInductionLocalTimeStepSize.cpp
  )
set(VERTEXCFD_CLOSUREMODEL_SOURCES "${VERTEXCFD_CLOSUREMODEL_SOURCES}" PARENT_SCOPE)

list(APPEND VERTEXCFD_BOUNDARYCONDITION_HEADERS
  full_induction_mhd_solver/boundary_conditions/VertexCFD_BCStrategy_FullInductionMHDBoundaryFlux.hpp
  full_induction_mhd_solver/boundary_conditions/VertexCFD_FullInductionBoundaryState_Factory.hpp
  full_induction_mhd_solver/boundary_conditions/VertexCFD_BoundaryState_FullInductionConducting.hpp
  full_induction_mhd_solver/boundary_conditions/VertexCFD_BoundaryState_FullInductionFixed.hpp
  )
set(VERTEXCFD_BOUNDARYCONDITION_HEADERS "${VERTEXCFD_BOUNDARYCONDITION_HEADERS}" PARENT_SCOPE)

list(APPEND VERTEXCFD_BOUNDARYCONDITION_SOURCES
  full_induction_mhd_solver/boundary_conditions/VertexCFD_BCStrategy_FullInductionMHDBoundaryFlux.cpp
  full_induction_mhd_solver/boundary_conditions/VertexCFD_FullInductionBoundaryState_Factory.cpp
  full_induction_mhd_solver/boundary_conditions/VertexCFD_BoundaryState_FullInductionConducting.cpp
  full_induction_mhd_solver/boundary_conditions/VertexCFD_BoundaryState_FullInductionFixed.cpp
  )
set(VERTEXCFD_BOUNDARYCONDITION_SOURCES "${VERTEXCFD_BOUNDARYCONDITION_SOURCES}" PARENT_SCOPE)

list(APPEND VERTEXCFD_INITIALCONDITION_HEADERS
  full_induction_mhd_solver/initial_conditions/VertexCFD_InitialCondition_MHDVortexProblem.hpp
  full_induction_mhd_solver/initial_conditions/VertexCFD_InitialCondition_DivergenceAdvectionTest.hpp
  full_induction_mhd_solver/initial_conditions/VertexCFD_FullInductionInitialConditionFactory.hpp
  )
set(VERTEXCFD_INITIALCONDITION_HEADERS "${VERTEXCFD_INITIALCONDITION_HEADERS}" PARENT_SCOPE)

list(APPEND VERTEXCFD_INITIALCONDITION_SOURCES
  full_induction_mhd_solver/initial_conditions/VertexCFD_InitialCondition_MHDVortexProblem.cpp
  full_induction_mhd_solver/initial_conditions/VertexCFD_InitialCondition_DivergenceAdvectionTest.cpp
  full_induction_mhd_solver/initial_conditions/VertexCFD_FullInductionInitialConditionFactory.cpp
  )
set(VERTEXCFD_INITIALCONDITION_SOURCES "${VERTEXCFD_INITIALCONDITION_SOURCES}" PARENT_SCOPE)

list(APPEND VERTEXCFD_PHYSICALPROPERTIES_HEADERS
  full_induction_mhd_solver/mhd_properties/VertexCFD_FullInductionMHDProperties.hpp
  )
set(VERTEXCFD_PHYSICALPROPERTIES_HEADERS "${VERTEXCFD_PHYSICALPROPERTIES_HEADERS}" PARENT_SCOPE)

if(VertexCFD_ENABLE_TESTING)
  # Full Induction model
  add_subdirectory(boundary_conditions/unit_test)
  add_subdirectory(closure_models/unit_test)
  add_subdirectory(initial_conditions/unit_test)
  add_subdirectory(mhd_properties/unit_test)
endif()
